--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 </title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<p> My name is Nik and I am a 22 year old UCSC student who was raised in the East Bay. Some of my interests include:</p>
+	<li>Filmmaking and Viewing</li>
+	<li>Photography</li>
+	<li>Illustrating and Painting</li>
+	<li>Surfing</li>
+	<li>Rock Climbing</li>
 
 </body>
 </html>
