--- a/lab3/index.html
+++ b/lab3/index.html
@@ -14,5 +14,5 @@
 	<li>Rock Climbing</li>
 
 </body>
-<img src="images/lab-3-portrait.jpg">
+<img id="my-portrait" src="images/lab-3-portrait.jpg">
 </html>
