--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+.Heading {
+	border: 5px outset blue;
+  background-color: lightblue;
+  text-align: center;
+}
+</style>
+</head>
 	<title>Lab 3</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
 		<p> My name is Nik and I am a 22 year old UCSC student who was raised in the East Bay. Some of my interests include:</p>
 </head>
 <body>
@@ -14,5 +20,5 @@
 	<li>Rock Climbing</li>
 
 </body>
-<img src="images/lab-3-portrait.jpg">
+<img id="my-portrait" src="lab-3-portrait.jpg" />
 </html>
