--- a/lab3/index.html
+++ b/lab3/index.html
@@ -20,5 +20,7 @@
 	<li>Rock Climbing</li>
 
 </body>
-<img id="my-portrait" src="lab-3-portrait.jpg" />
+
+<img src="lab-3-portrait.jpg" alt="lab-3-portrait.jpg" width="500" height="600">
+
 </html>
