--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,14 +2,16 @@
 <html>
 <head>
 <style>
-.Heading {
+.mydiv {
 	border: 5px outset blue;
   background-color: lightblue;
   text-align: center;
 }
 </style>
+<div class="Heading">
+	<h1>Lab 3</h1>
+</div>
 </head>
-	<title>Lab 3</title>
 		<p> My name is Nik and I am a 22 year old UCSC student who was raised in the East Bay. Some of my interests include:</p>
 </head>
 <body>
