--- a/lab3/index.html
+++ b/lab3/index.html
@@ -23,6 +23,9 @@
 
 </body>
 
-<img src="lab-3-portrait.jpg" alt="lab-3-portrait.jpg" width="500" height="600">
+<img id="my-portrait" src="lab-3-portrait.jpg" />
 
+#my-portrait {
+	width: 500px;
+}
 </html>
