--- a/lab3/index.html
+++ b/lab3/index.html
@@ -21,6 +21,16 @@
 	<li>Surfing</li>
 	<li>Rock Climbing</li>
 
+<div class="assignments major-selection">
+	<h2>Labs</h2>
+	<ul>
+
+		<li><a href="lab2/helloworld.html"></a>Lab 2: My First HTML</li>
+		<li><a href="lab3/">Lab 3: File Structures</a></li>
+		<li><a href="lab4/">Lab 4: File Transfer</a></li>
+		<li><a href="lab5/">Lab 5:</a></li>
+		<li><a href="lab6/">Lab 6:</a></li>
+		
 </body>
 
 <img id="my-portrait" src="lab-3-portrait.jpg" />
