--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
-<body>
-
-</body>
+	<head>
+		<title>Lab 6: Arrays and Objects</title>
+		<link rel="stylesheet" type="text/css" href="../css/site.css">
+		<link rel="stylesheet" type="text/css" href="css/lab.css">
+	</head>
+	<body>
+		<div>
+        <h2>Script Output</h2>
+        <script src="js/lab.js"></script>
+    </div>
+	</body>
 </html>
