--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<title>Lab 6: Arrays and Objects</title>
 		<link rel="stylesheet" type="text/css" href="../css/site.css">
 		<link rel="stylesheet" type="text/css" href="css/lab.css">
 	</head>
+
 	<body>
 		<div>
-        <h2>Script Output</h2>
-        <script src="js/lab.js"></script>
+
+			<h2>Mission</h2>
+
+			<p> The object of this Lab was to introduce us to the ideas of Objecs and Arrays. </p>
+
+			<h2>Complications</h2>
+
+			<p> I didn't really have any complications with this Lab, I'm glad to say. </p>
+
+			<h2>Results</h2>
+
+			<p>Below are the results of my work on this lab. </p>
+
+		<div>
+
+      <h2>Script Output</h2>
+      <script src="js/lab.js"></script>
+			
     </div>
 	</body>
 </html>
