--- a/lab7/index.html
+++ b/lab7/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
-<body>
-
-</body>
-</html>
+	<head>
+		<title>Lab 7 - Subject/Topic</title>
+		<link rel="stylesheet" type="text/css" href="../css/site.css">
+		<link rel="stylesheet" type="text/css" href="css/lab.css">
+	</head>
+	<body>
+			<div id="content">
+					<h1>Lab 7: Functions</h1>
+					<h2>Mission</h2>
+					<p>The goal of this lab is to write functions that take user input</p>
+					<h2>Challenges</h2>
+					<p> FILL IN THIS SPOT </p>
+					<h2>Results and Script Output</h2>
+					<div>
+							<script src="js/lab.js"></script>
+					</div>
+			</div>
+	</body>
+</html
