--- a/lab7/index.html
+++ b/lab7/index.html
@@ -11,7 +11,7 @@
 					<h2>Mission</h2>
 					<p>The goal of this lab is to write functions that take user input</p>
 					<h2>Challenges</h2>
-					<p> FILL IN THIS SPOT </p>
+					<p>For the first time, I understood how each part of the JavaScript worked, I am filled with Hazaa!</p>
 					<h2>Results and Script Output</h2>
 					<div>
 							<script src="js/lab.js"></script>
